Fix topic post alignment

--- a/theme/stylesheet.css
+++ b/theme/stylesheet.css
@@ -263,18 +263,19 @@ label.strong {
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
   padding: 5px 20px;
-  overflow: hidden;
   border-radius: 4px;
   margin-bottom: 15px;
+  display:block;
 }
 
 .topic-container .postprofile {
-  width: 25%;
-  max-width: 200px;
+  width: 17%;
+  min-width: 180px;
+  min-height: 180px;
   border-right: 1px solid rgba(0, 0, 0, 0.1);
-  float:left;
-  padding-right: 15px;
-  padding-bottom: 80px;
+  float: left;
+  white-space: normal;
+  vertical-align: top;
 }
 
 .topic-container .postprofile dd {
@@ -282,9 +283,8 @@ label.strong {
 }
 
 .topic-container .postbody {
-  float:left;
-  width: 75%;
-  margin-left: 15px;
+  padding-left: 10px;
+  overflow: auto;
 }
 
 .topic-container .postbody h3 {
